2012-09-10  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSJSONSerialization.m:
        Fix quoting of string output by copying code from WebServices library.

2012-09-10  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSJSONSerialization.m:
        * Source/NSPropertyList.m:
        Improve serialisation of booleans.

2012-09-10  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/Foundation/NSDate.h: Declare new OSX method to add time
        interval to a date.
        * Source/NSDate.m: Implement it
        * Source/NSCalendarDate.m: Ditto
        * Source/NSRunLoop.m: Add exception handling for run loop performer.

2012-09-10  Sergii Stoian <stoyan255@gmail.com>

        * Source/NSFileManager.m:
        [createDirectoryAtPath:withIntermediateDirectories:attributes:error:]:
        Create directories only if it doesn't exist.

2012-09-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

        * Source/NSPropertyList.m (-storeString): Add missing variable
        declaration on big-endian systems.

2012-09-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m:
        Don't ignore whitespace in keys and values when parsing XML ... the
        DTD says everything apart from array and dict contains #PCDATA.

2012-09-05  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSScanner.m: Compatibility tweak reported by hns@computer.org
        A string like '1.2eX' where X is not a numeric exponent, needs to be
        scanned as a float/double up to (but not including) the 'e' (or 'E')
        rather than being treated as a badly formatted float/double.

2012-09-04  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSXMLDocument/cdata.m: New test case for CDATA.

2012-09-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m:
	* Source/NSBundle.m:
	* Source/NSPropertyList.m:
	* Source/NSProcessInfo.m:
	* Source/NSSocketPort.m:
	* Source/NSRunLoop.m:
	* Source/NSMessagePortNameServer.m:
	* Source/NSDistributedLock.m: