@@ -1608,44 +1608,48 @@ static NSUInteger	urlAlign;
 - (NSString*) _pathWithEscapes: (BOOL)withEscapes
 {
   NSString	*path = nil;
-  unsigned int	len = 3;
 
-  if (_baseURL != nil)
+  if (YES == myData->isGeneric || 0 == myData->scheme)
     {
-      if (baseData->path && *baseData->path)
+      unsigned int	len = 3;
+
+      if (_baseURL != nil)
         {
-          len += strlen(baseData->path);
-	}
-      else if (baseData->hasNoPath == NO)
-	{
-	  len++;
-	}
-    }
-  if (myData->path && *myData->path)
-    {
-      len += strlen(myData->path);
-    }
-  else if (myData->hasNoPath == NO)
-    {
-      len++;
-    }
-  if (len > 3)
-    {
-      char		buf[len];
-      char		*ptr;
-      char		*tmp;
+          if (baseData->path && *baseData->path)
+            {
+              len += strlen(baseData->path);
+            }
+          else if (baseData->hasNoPath == NO)
+            {
+              len++;
+            }
+        }
+      if (myData->path && *myData->path)
+        {
+          len += strlen(myData->path);
+        }
+      else if (myData->hasNoPath == NO)
+        {
+          len++;
+        }
+      if (len > 3)
+        {
+          char		buf[len];
+          char		*ptr;
+          char		*tmp;
 
-      ptr = [self _path: buf withEscapes: withEscapes];
+          ptr = [self _path: buf withEscapes: withEscapes];
 
-      /* Remove any trailing '/' from the path for MacOS-X compatibility.
-       */
-      tmp = ptr + strlen(ptr) - 1;
-      if (tmp > ptr && *tmp == '/')
-	{
-	  *tmp = '\0';
-	}
+          /* Remove any trailing '/' from the path for MacOS-X compatibility.
+           */
+          tmp = ptr + strlen(ptr) - 1;
+          if (tmp > ptr && *tmp == '/')
+            {
+              *tmp = '\0';
+            }
 
-      path = [NSString stringWithUTF8String: ptr];
+          path = [NSString stringWithUTF8String: ptr];
+        }
     }
   return path;
 }
@@ -1751,40 +1755,47 @@ static NSUInteger	urlAlign;
 
 - (NSString*) resourceSpecifier
 {
-  NSRange	range = [_urlString rangeOfString: @"://"];
-
-  if (range.length > 0)
+  if (YES == myData->isGeneric)
     {
-      NSString *specifier;
+      NSRange	range = [_urlString rangeOfString: @"://"];
 
-      /* MacOSX compatibility - in the case where there is no
-       * host in the URL, just return the path (without the "//").
-       * For all other cases we return the whole specifier.
-       */
-      if (nil == [self host])
-	{
-          specifier = [_urlString substringFromIndex: NSMaxRange(range)];
-	}
+      if (range.length > 0)
+        {
+          NSString *specifier;
+
+          /* MacOSX compatibility - in the case where there is no
+           * host in the URL, just return the path (without the "//").
+           * For all other cases we return the whole specifier.
+           */
+          if (nil == [self host])
+            {
+              specifier = [_urlString substringFromIndex: NSMaxRange(range)];
+            }
+          else
+            {
+              specifier = [_urlString substringFromIndex: range.location+1];
+            }
+          return specifier;
+        }
       else
-	{
-          specifier = [_urlString substringFromIndex: range.location+1];
-	}
-      return specifier;
+        {
+          /*
+           * Cope with URLs missing net_path info -  <scheme>:/<path>...
+           */
+          range = [_urlString rangeOfString: @":"];
+          if (range.length > 0)
+            {
+              return [_urlString substringFromIndex: range.location + 1];
+            }
+          else
+            {
+              return _urlString;
+            }
+        }
     }
   else
     {
-      /*
-       * Cope with URLs missing net_path info -  <scheme>:/<path>...
-       */
-      range = [_urlString rangeOfString: @":"];
-      if (range.length > 0)
-	{
-	  return [_urlString substringFromIndex: range.location + 1];
-	}
-      else
-	{
-	  return _urlString;
-	}
+      return [NSString stringWithUTF8String: myData->path];
     }
 }
 
@@ -2025,34 +2036,38 @@ static NSUInteger	urlAlign;
 - (NSString*) fullPath
 {
   NSString	*path = nil;
-  unsigned int	len = 3;
 
-  if (_baseURL != nil)
+  if (YES == myData->isGeneric || 0 == myData->scheme)
     {
-      if (baseData->path && *baseData->path)
+      unsigned int	len = 3;
+
+      if (_baseURL != nil)
         {
-          len += strlen(baseData->path);
-	}
-      else if (baseData->hasNoPath == NO)
-	{
-	  len++;
-	}
-    }
-  if (myData->path && *myData->path)
-    {
-      len += strlen(myData->path);
-    }
-  else if (myData->hasNoPath == NO)
-    {
-      len++;
-    }
-  if (len > 3)
-    {
-      char		buf[len];
-      char		*ptr;
+          if (baseData->path && *baseData->path)
+            {
+              len += strlen(baseData->path);
+            }
+          else if (baseData->hasNoPath == NO)
+            {
+              len++;
+            }
+        }
+      if (myData->path && *myData->path)
+        {
+          len += strlen(myData->path);
+        }
+      else if (myData->hasNoPath == NO)
+        {
+          len++;
+        }
+      if (len > 3)
+        {
+          char		buf[len];
+          char		*ptr;
 
-      ptr = [self _path: buf withEscapes: NO];
-      path = [NSString stringWithUTF8String: ptr];
+          ptr = [self _path: buf withEscapes: NO];
+          path = [NSString stringWithUTF8String: ptr];
+        }
     }
   return path;
 }
